--- a/projects/UVUnwrapLSCM/win_vs2017/script2.rc
+++ b/projects/UVUnwrapLSCM/win_vs2017/script2.rc
@@ -33,8 +33,8 @@ UV_LSCM_DLG             SXUL                    "..\\source\\resources\\ja.lproj
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,0
- PRODUCTVERSION 1,0,0,0
+ FILEVERSION 1,0,0,1
+ PRODUCTVERSION 1,0,0,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -51,11 +51,11 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "ft-lab."
             VALUE "FileDescription", "UVUnwrapLSCM"
-            VALUE "FileVersion", "1.0.0.0"
+            VALUE "FileVersion", "1.0.0.1"
             VALUE "InternalName", "UVUnwrapLSCM"
-            VALUE "LegalCopyright", "Copyright (C) 2018 ft-lab."
+            VALUE "LegalCopyright", "Copyright (C) 2018-2019 ft-lab."
             VALUE "ProductName", "UVUnwrapLSCM"
-            VALUE "ProductVersion", "1.0.0.0"
+            VALUE "ProductVersion", "1.0.0.1"
         END
     END
     BLOCK "VarFileInfo"
